added email to login/signup

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,8 +3,8 @@
         <h2>Login</h2>
         <form action="submit" id="login-form">
         <div>
-            <label for="username-login">Username: </label>
-            <input type="text" id="username-login" />
+            <label for="email-login">Email Address: </label>
+            <input type="text" id="username-login" placeholder="example@email.com"/>
         </div>
         <div>
             <label for="password-login">Password: </label>
@@ -20,6 +20,11 @@
         <div>
         <h2>Signup</h2>
         <form action="submit" id="signup-form">
+        <div>
+            <label for="email-signup">Email Address: </label>
+            <input type="text" id="email-signup" placeholder="example@email.com"/>
+        </div>   
+
         <div>
             <label for="username-signup">Username: </label>
             <input type="text" id="username-signup" />
