login and logout functinality added, will render homepage when logged in, can log out

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
         <form action="submit" id="login-form">
         <div>
             <label for="email-login">Email Address: </label>
-            <input type="text" id="username-login" placeholder="example@email.com"/>
+            <input type="text" id="email-login" placeholder="example@email.com"/>
         </div>
         <div>
             <label for="password-login">Password: </label>
