--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
     <header>
         <h1>Page Title</h1>
         <a href="/">Home</a>
-        <a href="">Login</a>
-        <a href="">Logout</a>
+        <a id = "login" href="">Login</a>
+        <a id = "logout" style="cursor:pointer">Logout</a>
     </header>
 
     <div>
@@ -38,5 +38,13 @@
     </div>
 
 <!--To Do: Add javascript scripts -->
+ {{#if logged_in}}
+       <script src="/js/logout.js"></script>
+       {{!-- <script src="/js/dashboard.js"></script>
+       <script src="/js/posts.js"></script> --}}
+    {{else}}
+       <script src="/js/login.js"></script>
+{{/if}}
+
 </body>
 </html>
