Added visibility toggle for the form

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <button type="button">Add a restaturant</button>
+        <button id="newRestaurantToggle" type="button">Add a restaturant</button>
         <!--CSS to allow hide toggling here-->
         <div>
             <form id="new-restaurant-form" action="submit">
