updated user routes to dasgboard routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,8 @@
     <header>
         <h1>Page Title</h1>
         <a href="/">Home</a>
+        <a href="/dashboard">dashboard</a>
+
         <a id = "login" href="">Login</a>
         <a id = "logout" style="cursor:pointer">Logout</a>
     </header>
