fixed dashboiard route to render session users restaurants, udpated dashboard.js with uf statements so it doesn tbreak

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -27,7 +27,7 @@
 
     <!--Cards Here-->
     {{#each restaurants as |restaurant|}}
-        {{>restaturant-dash-card}}
+        {{>restaurant-dash-card}}
     {{/each}}
     
 </div>
