--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,8 +42,8 @@
 <!--To Do: Add javascript scripts -->
  {{#if logged_in}}
        <script src="/js/logout.js"></script>
-       {{!-- <script src="/js/dashboard.js"></script>
-       <script src="/js/posts.js"></script> --}}
+       <script src="/js/dashboard.js"></script>
+       {{!-- <script src="/js/posts.js"></script> --}}
     {{else}}
        <script src="/js/login.js"></script>
 {{/if}}
