updated Id tags

--- a/views/restaurantPage.handlebars
+++ b/views/restaurantPage.handlebars
@@ -13,14 +13,14 @@
 
     <div>
         <h2>Leave your review</h2>
-        <form action="submit">
-            <label for="reviewText">Your comments:</label>
+        <form action="submit" id="review-form">
+            <label for="reviewText">Your review:</label>
             <br>
             <textarea name="reviewText" id="reviewText"></textarea>
             <br>
-            <label for="reviewScore">Rating:</label>
+            <label for="reviewRating">Rating:</label>
             <br>
-            <select name="reviewScore" id="reviewScore">
+            <select name="reviewRating" id="reviewRating">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
