added a review script

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,6 +47,7 @@
        <script src="/js/logout.js"></script>
        <script src="/js/dashboard.js"></script>
         <script src="/js/searchRequests.js"></script>
+        <script src="/js/review.js"></script>
        {{!-- <script src="/js/posts.js"></script> --}}
     {{else}}
        <script src="/js/login.js"></script>
