update/delete route renders restaurant data to edit

--- a/views/restaurantEdit.handlebars
+++ b/views/restaurantEdit.handlebars
@@ -1,3 +1,6 @@
+{{#with restaurants as |restaurant|}}
+
+
 <div>
     <div>
         <h2>Edit this Restaurant:</h2>
@@ -25,3 +28,4 @@
         <button id="restaurant-delete">Delete This Restauant?</button>
     </div>
 </div>    
+{{/with}}
