--- a/views/partials/restaurant-dash-card.handlebars
+++ b/views/partials/restaurant-dash-card.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
 <!--Add some dummy details for now -->
     <!--Turn The card into a link that we can click to access indivdually-->
-    <a href="/restaurant/{{id}}">
+    <a href="/dashboard/{{id}}">
     <h3>{{name}}</h3>
     <p>{{bio}}</p>
     <p>{{location}}</p>
