update and delete routes working

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -26,6 +26,8 @@
     </div>
 
     <!--Cards Here-->
+
+    <h3>Restaurants:</h3>
     {{#each restaurants as |restaurant|}}
         {{>restaurant-dash-card}}
     {{/each}}
