--- a/views/restaurantEdit.handlebars
+++ b/views/restaurantEdit.handlebars
@@ -1,10 +1,9 @@
 {{#with restaurants as |restaurant|}}
 
-
 <div>
     <div>
         <h2>Edit this Restaurant:</h2>
-        <form action="submit" id="restaurant-update">
+        <form action="submit" id="restaurant-update" data-id ="{{id}}">
             <label for="restaurant-name">Restaurant Name: </label>
             <br>
             <input type="text" value="{{name}}" id="restaurant-name">
@@ -19,13 +18,13 @@
             <br>
             <label for="restaurant-website">Website: </label>
             <br>
-            <input type="text" value="{{website}}">
+            <input type="text" value="{{website}}" id="restaurant-website">
             <br>
             <button type="submit">Submit Update</button>
         </form>
     </div>
     <div>
-        <button id="restaurant-delete">Delete This Restauant?</button>
+        <button id="restaurant-delete" data-id="{{id}}">Delete This Restauant?</button>
     </div>
 </div>    
 {{/with}}
