fixed password box issues

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
         </div>
         <div>
             <label for="password-login">Password: </label>
-            <input type="text" type="password" id="password-login" />
+            <input type="password" id="password-login" />
         </div>
         <div>
             <button type="submit">Login</button>
@@ -31,7 +31,7 @@
         </div>
         <div>
             <label for="password-signup">Password: </label>
-            <input type="text" type="password" id="password-signup" />
+            <input type="password" id="password-signup" />
         </div>
         <div>
             <button type="submit">Signup</button>
