added ability to add rating to each restaurant based off the review scores

--- a/views/partials/restaurant-dash-card.handlebars
+++ b/views/partials/restaurant-dash-card.handlebars
@@ -9,6 +9,7 @@
     <p>{{bio}}</p>
     <p>{{location}}</p>
     <p>{{website}}</p>
+    <p>rating: {{restaurantRating}}</p>
     </a>    
 </div>
 
