fiex issue with not all reviews showing for each rest page, still need to implement work around for dashboard

--- a/views/partials/restaurant-dash-card.handlebars
+++ b/views/partials/restaurant-dash-card.handlebars
@@ -13,6 +13,8 @@
     </a>    
 </div>
 
+{{!-- TODO: one have final css for app, need to update links so retaurant dash card goes to rest page, and add edit button  --}}
+
 <h4>Reviews: </h4>
 
 {{#each Reviews as |review|}}
