--- a/views/restaurantPage.handlebars
+++ b/views/restaurantPage.handlebars
@@ -4,7 +4,7 @@
         <p>About Us: {{restaurant.bio}}</p>
         <p>Located at: {{restaurant.location}}</p>
         <a href="{{restaurant.website}}">Our Webpage</a>
-        <p>Average score: {{restaurant.restaurantRating}}</p>
+        <p>Average score: {{score.restaurantRating}}</p>
         
     </div>
     <h4>Reviews:</h4>
