--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -26,7 +26,7 @@
     </div>
 
     <!--Cards Here-->
-
+{{!-- TODO: one have final css for app, need to update links so retaurant dash card goes to rest page, and add edit button  --}}
     <h3>Restaurants:</h3>
     {{#each restaurants as |restaurant|}}
         {{>restaurant-dash-card}}
