--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <div>
+    <div class ="border mt-3 border-light border-2">
         <h2>Login</h2>
         <form action="submit" id="login-form">
         <div>
@@ -16,7 +16,7 @@
         </form>
     </div>
     
-    <div>
+    <div class ="border mt-3 mb-3 border-light border-2">
         <div>
         <h2>Signup</h2>
         <form action="submit" id="signup-form">
