--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
-        <a class="navbar-brand text-light" href="#">Welcome to Restaurant Reviewer</a>
+        <a class="navbar-brand text-light" href="#">My 5STAR local</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,59 +42,65 @@
 
     <div class="container">
         <div class="row">
-
-            <div class="col-sm bg-warning mr-5 mt-3 mb-3 border">
-
-                <div class ="border mt-3 border-light border-2">
-                <h2>Restaurant Search:</h2>
-                <br>
-                <form action="submit" id='nameSearchForm'>
-                    <label for="nameSearch">Restaurant Name:</label>
+            <div class="col">
+        
+            </div>
+            <div class="col-6 bg-warning mr-5 mt-3 mb-3 border">
+                <div class="border mt-3 border-light border-2">
+                    <h2>Restaurant Search:</h2>
                     <br>
-                    <input type="text" placeholder="Search by name" id="nameSearch">
-                    <br>
-                    <button type="submit">Search</button>
-                </form>
-                <form action='submit' id="locSearchForm">
-                    <label for="locationSearch">Location Search: </label>
-                    <br>
-                    <input type="text" placeholder="Search by location" id="locationSearch">
-                    <br>
-                    <button type="submit">Search</button>
-                </form>
+                    <form action="submit" id='nameSearchForm'>
+                        <label for="nameSearch">Restaurant Name:</label>
+                        <br>
+                        <input type="text" placeholder="Search by name" id="nameSearch">
+                        <br>
+                        <button type="submit">Search</button>
+                    </form>
+                    <form action='submit' id="locSearchForm">
+                        <label for="locationSearch">Location Search: </label>
+                        <br>
+                        <input type="text" placeholder="Search by location" id="locationSearch">
+                        <br>
+                        <button type="submit">Search</button>
+                    </form>
                 </div>
                 {{{body}}}
 
-                
+
                 {{#if logged_in}}
-                 <div class ="border mt-3 border-light border-2">
-                <script src="/js/logout.js"></script>
-                <script src="/js/dashboard.js"></script>
-                <script src="/js/searchRequests.js"></script>
-                <script src="/js/review.js"></script>
-                {{else}}
-                <script src="/js/login.js"></script>
-            </div> 
-            <div class="col-sm bg-warning mr-5 mt-3 mb-3 border">
-                Restaurant search results here
-            </div> 
-
-
-        </div>
-    </div>
-
-
-
-    {{/if}}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+                <div class="border mt-3 border-light border-2">
+                    <script src="/js/logout.js"></script>
+                    <script src="/js/dashboard.js"></script>
+                    <script src="/js/searchRequests.js"></script>
+                    <script src="/js/review.js"></script>
+                    {{else}}
+                    <script src="/js/login.js"></script>
+                    {{/if}}
+                    </div>
+                    <div class="col">
+                        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                      
+                    </div>
+                    <div class="col-5">
+                    </div>
+                    <div class="col">
+                       
+                    </div>
+                </div>
+            </div>
+                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                    crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                    crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                    crossorigin="anonymous"></script>
 </body>
 
 </html>
