--- a/views/restaurantPage.handlebars
+++ b/views/restaurantPage.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <div id = "restaurantCard" data-id ="{{restaurant.id}}">
+    <div id = "restaurantCard " class="border mt-3 border-light border-2" data-id ="{{restaurant.id}}">
         <h2>{{restaurant.name}}</h2>
         <p>About Us: {{restaurant.bio}}</p>
         <p>Located at: {{restaurant.location}}</p>
