--- a/views/partials/restaurant-card.handlebars
+++ b/views/partials/restaurant-card.handlebars
@@ -1,10 +1,10 @@
 <div class="card">
 <!--Add some dummy details for now -->
     <!--Turn The card into a link that we can click to access indivdually-->
-    <a href="/restaurant/{{id}}">
+    <div class="border border-light border-2 bg-warning" href="/restaurant/{{id}}">
     <h3>{{name}}</h3>
     <p>{{bio}}</p>
     <p>{{location}}</p>
     <p>{{website}}</p>
-    </a>    
+    </div>    
 </div>
