--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,8 @@
-<div>
+<div class="border mt-3 border-light border-2">
     <div>
         <button id="newRestaurantToggle" type="button">Add a restaturant</button>
         <!--CSS to allow hide toggling here-->
-        <div>
+        <div class="border mt-3 border-light border-2">
             <form id="new-restaurant-form" action="submit">
                 <label for="restaurant-name">Name:</label>
                 <br>
