--- a/views/partials/restaurant-dash-card.handlebars
+++ b/views/partials/restaurant-dash-card.handlebars
@@ -1,10 +1,10 @@
 
 
 
-<div class="card">
+<div class="card ">
 <!--Add some dummy details for now -->
     <!--Turn The card into a link that we can click to access indivdually-->
-    <a href="/dashboard/{{id}}">
+    <a class="border border-light border-2 bg-warning text-dark text-decoration-none" href="/dashboard/{{id}}">
     <h3>{{name}}</h3>
     <p>{{bio}}</p>
     <p>{{location}}</p>
