--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="border mt-3 border-light border-2">
+<div>
     <div>
         <button id="newRestaurantToggle" type="button">Add a restaturant</button>
         <!--CSS to allow hide toggling here-->
