--- a/views/partials/review.handlebars
+++ b/views/partials/review.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="border mt-3 border-light border-2">
     <p>Reviewed by: {{User.name}}</p>
     <p>{{text}}</p>
     <p>Rating: {{rating}}</p>
