--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div>
-    <div class ="border mt-3 border-light border-2">
+    <div class ="border rounded mt-3 border-light roudned p-2 border-2" >
         <h2>Login</h2>
-        <form action="submit" id="login-form">
+        <form class="p-2 rounded" style="background-color: #FFE5B4;" action="submit" id="login-form">
         <div>
             <label for="email-login">Email Address: </label>
             <input type="text" id="email-login" placeholder="example@email.com"/>
@@ -16,10 +16,10 @@
         </form>
     </div>
     
-    <div class ="border mt-3 mb-3 border-light border-2">
+    <div class ="border rounded mt-3 border-light roudned p-2 border-2" >
         <div>
         <h2>Signup</h2>
-        <form action="submit" id="signup-form">
+        <form class="p-2 rounded" style="background-color: #FFE5B4;" action="submit" id="signup-form">
         <div>
             <label for="email-signup">Email Address: </label>
             <input type="text" id="email-signup" placeholder="example@email.com"/>
