--- a/views/partials/review.handlebars
+++ b/views/partials/review.handlebars
@@ -1,5 +1,6 @@
-<div>
-    <p>Reviewed by: {{User.name}}</p>
-    <p>{{text}}</p>
+<div class = "p-2 border rounded" style="background-color: #FFE5B4;">
+    <h5>Reviewed by: {{User.name}}</h5>
+    <p>Review: {{text}}</p>
     <p>Rating: {{rating}}</p>
 </div>
+<br>
