--- a/views/partials/restaurant-card.handlebars
+++ b/views/partials/restaurant-card.handlebars
@@ -1,11 +1,14 @@
-<div class="card">
+<div class="card border border-light border-2 bg-warning text-dark text-decoration-none p-2">
 <!--Add some dummy details for now -->
     <!--Turn The card into a link that we can click to access indivdually-->
-    <div class="border border-light border-2 bg-warning" href="/restaurant/{{id}}">
-    <h3>{{name}}</h3>
-    <p>{{bio}}</p>
-    <p>{{location}}</p>
-    <p>{{website}}</p>
-    <p>rating: {{restaurantRating}}</p>
-    </div>    
+    <a class="p-1 text-decoration-none text-dark rounded bg-warning" href="/restaurant/{{id}}">
+    <h3> {{name}} </h3>
+    </a>  
+    <div class="rounded p-2" style="background-color: #FFE5B4;">
+    <p>Bio: {{bio}}</p>
+    <p>Location: {{location}}</p>
+    <p>Website: <a href="{{website}}">{{website}}</a></p>
+    <p>Average Rating: {{restaurantRating}}</p>
+    </div> 
 </div>
+<br>
